--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,6 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
+  
   build:
 
     runs-on: ubuntu-latest
@@ -26,4 +27,18 @@ jobs:
     - name: Display SoftUni username maria_abr
       run: echo "maria_abr"
       
-    
+  deploy:
+
+    needs: build
+    # Uncomment if required the job to be executed only if the workflow is started manually.
+    # if: github.event_name == 'workflow_dispatch' 
+
+    runs-on: ubuntu-latest
+
+    steps:
+
+      - name: Deploy to production in render.com
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.RENDER_API_KEY }}
